[package]
name = "mdview"
version = "0.1.0"
edition = "2021"
description = "Professional markdown viewer for the terminal with Vim-style navigation"
license = "MIT"
readme = "README.md"
keywords = ["markdown", "cli", "viewer", "terminal", "tui"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
pulldown-cmark = "0.12"
ratatui = "0.29"
unicode-width = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
